unpackaged/main/default/objects/Opportunity/fields/Original_Quote_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Create_Date__c</fullName>
    <label>Original Quote Create Date</label>
    <type>Date</type>
</CustomField>