unpackaged/main/default/objects/Opportunity/fields/Original_Quoter_Email__c.field-meta.xml
<CustomField>
    <fullName>Original_Quoter_Email__c</fullName>
    <inlineHelpText>The Email that was used the first time the quote was created.</inlineHelpText>
    <label>Original Quoter Email</label>
    <type>Email</type>
</CustomField>