unpackaged/main/default/objects/Opportunity/fields/OriginatedInFusion360__c.field-meta.xml
<CustomField>
    <fullName>OriginatedInFusion360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Originated in Fusion 360</label>
    <type>Checkbox</type>
</CustomField>