unpackaged/main/default/objects/Opportunity/fields/Outreach_Attributed_Finished_Sequences__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Attributed_Finished_Sequences__c</fullName>
    <description>All sequences that the prospect has completed via Outreach when opp is created</description>
    <inlineHelpText>All sequences that the prospect has completed via Outreach when opp is created</inlineHelpText>
    <label>Attributed Finished Sequences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>