unpackaged/main/default/objects/Opportunity/fields/Outreach_Last_Touch_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Last_Touch_Sequence__c</fullName>
    <description>The last active sequence for the first Primary contact in an opportunity when the opportunity was created.</description>
    <inlineHelpText>The last active sequence for the first primary contact in an opportunity when the opportunity was created.</inlineHelpText>
    <label>Last Touch Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>