unpackaged/main/default/objects/Opportunity/fields/Outreach_Sync_Reason__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Sync_Reason__c</fullName>
    <description>Logic to determine whether a opportunity record should be synced into Outreach.  Used to limit the number of API calls</description>
    <formula>if(
    Managed_Services__c = TRUE
    &amp;&amp; 
    (
        CloseDate = today()
        || datevalue(CreatedDate) = today()
        || datevalue(LastModifiedDate) = today()
    ),
    "Closed, Created, Updated Today",
    ""
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Logic to determine whether a opportunity record should be synced into Outreach.  Used to limit the number of API calls</inlineHelpText>
    <label>Outreach Sync Reason</label>
    <type>Text</type>
</CustomField>