unpackaged/main/default/objects/Opportunity/fields/Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Owner_Active__c</fullName>
    <formula>AND(Owner.IsFrozen__c = False,
Owner.IsActive = true)</formula>
    <label>Owner: Active</label>
    <type>Checkbox</type>
</CustomField>