unpackaged/main/default/objects/Opportunity/fields/Owner_IM_Certified__c.field-meta.xml
<CustomField>
    <fullName>Owner_IM_Certified__c</fullName>
    <formula>Owner.Injection_Molding_Certified__c</formula>
    <label>Owner IM Certified?</label>
    <type>Checkbox</type>
</CustomField>