unpackaged/main/default/objects/Opportunity/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <formula>TEXT(Owner.User_Owner_Type__c)</formula>
    <label>Owner Type</label>
    <type>Text</type>
</CustomField>