unpackaged/main/default/objects/Opportunity/fields/Owner_Update_Needed__c.field-meta.xml
<CustomField>
    <fullName>Owner_Update_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owner Update Needed</label>
    <type>Checkbox</type>
</CustomField>