unpackaged/main/default/objects/Opportunity/fields/P21_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>P21_Account_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P21 Account Details</label>
    <referenceTo>P21_Account_Details__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>