unpackaged/main/default/objects/Opportunity/fields/Partner_Quote__c.field-meta.xml
<CustomField>
    <fullName>Partner_Quote__c</fullName>
    <formula>not(isblank(Account.GNO_PartnerId__c))</formula>
    <label>Partner Quote</label>
    <type>Checkbox</type>
</CustomField>