unpackaged/main/default/objects/Opportunity/fields/PartnerPSSOverallScore__c.field-meta.xml
<CustomField>
    <fullName>PartnerPSSOverallScore__c</fullName>
    <description>Overall PSS Score</description>
    <formula>Primary_Supplier__r.OverallRating__c</formula>
    <inlineHelpText>Overall PSS Score</inlineHelpText>
    <label>Partner PSS Overall Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>