unpackaged/main/default/objects/Opportunity/fields/Pending_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payment_Type__c</fullName>
    <label>Pending Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Buy Now Pay Later</fullName>
            </value>
            <value>
                <fullName>No Payment</fullName>
            </value>
            <value>
                <fullName>BNPL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>