unpackaged/main/default/objects/Opportunity/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this Opp is one of the primary Opps for the Project in which it resides</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>