unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_First_IM_Tool_Order__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_IM_Tool_Order__c</fullName>
    <formula>Primary_Contact__r.First_IM_Tool_Order__c</formula>
    <label>Primary Contact - First IM Tool Order</label>
    <type>Date</type>
</CustomField>