unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_First_Quote_Date__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_First_Quote_Date__c</fullName>
    <formula>Primary_Contact__r.First_Quote_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact First Quote Date</label>
    <type>Date</type>
</CustomField>