unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_Has_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Has_Phone__c</fullName>
    <formula>not(isblank(Primary_Contact__r.Phone ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Has Phone</label>
    <type>Checkbox</type>
</CustomField>