unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_MK_Lead_Grade_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_MK_Lead_Grade_Segment__c</fullName>
    <formula>Primary_Contact__r.MK_Lead_Grade_Segment__c</formula>
    <label>Primary Contact MK Lead Grade Segment</label>
    <type>Text</type>
</CustomField>