unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_Next_Activity_Date_AM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Next_Activity_Date_AM__c</fullName>
    <formula>ENCODED:{!ID:00N3u00000PBHqK.ActivityMetric.NextActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Next Activity Date AM</label>
    <type>Date</type>
</CustomField>