unpackaged/main/default/objects/Opportunity/fields/Primary_Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Score__c</fullName>
    <formula>Primary_Contact__r.Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Score</label>
    <type>Text</type>
</CustomField>