unpackaged/main/default/objects/Opportunity/fields/Primary_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>