unpackaged/main/default/objects/Opportunity/fields/Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Project_Amount__c</fullName>
    <formula>Project__r.Amount__c</formula>
    <label>Project Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>