unpackaged/main/default/objects/Opportunity/fields/Project_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Close_Date__c</fullName>
    <formula>Project__r.Close_Date__c</formula>
    <label>Project Close Date</label>
    <type>Date</type>
</CustomField>