unpackaged/main/default/objects/Opportunity/fields/Project_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Created_Date__c</fullName>
    <formula>Project__r.CreatedDate</formula>
    <label>Project Created Date</label>
    <type>Date</type>
</CustomField>