unpackaged/main/default/objects/Opportunity/fields/Project_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Last_Modified_Date__c</fullName>
    <formula>Project__r.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Last Modified Date</label>
    <type>DateTime</type>
</CustomField>