unpackaged/main/default/objects/Opportunity/fields/Project_Last_Opp_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Last_Opp_Created_Date__c</fullName>
    <formula>Project__r.Last_Opp_Created_Date__c</formula>
    <label>Project Last Opp Created Date</label>
    <type>Date</type>
</CustomField>