unpackaged/main/default/objects/Opportunity/fields/Project_Last_Quote_Mod_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Last_Quote_Mod_Date__c</fullName>
    <formula>Project__r.Last_Quote_Mod_Date__c</formula>
    <label>Project Last Quote Mod Date</label>
    <type>Date</type>
</CustomField>