unpackaged/main/default/objects/Opportunity/fields/Project_on_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Project_on_Hold_Reason__c</fullName>
    <label>Project on Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Model Hold (DFM)</fullName>
            </value>
            <value>
                <fullName>Budgetary Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>