unpackaged/main/default/objects/Opportunity/fields/Project_Ordered_Processes__c.field-meta.xml
<CustomField>
    <fullName>Project_Ordered_Processes__c</fullName>
    <formula>Project__r.Ordered_Processes__c</formula>
    <label>Project Ordered Processes</label>
    <type>Text</type>
</CustomField>