unpackaged/main/default/objects/Opportunity/fields/Project_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Primary_Contact__c</fullName>
    <formula>Project__r.Primary_Contact__c</formula>
    <label>Project Primary Contact</label>
    <type>Text</type>
</CustomField>