unpackaged/main/default/objects/Opportunity/fields/Project_Primary_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Primary_Contact_Name__c</fullName>
    <formula>Project__r.Primary_Contact__r.FirstName &amp; " " &amp; Project__r.Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Primary Contact Name</label>
    <type>Text</type>
</CustomField>