unpackaged/main/default/objects/Opportunity/fields/Project_Quoted_Processes__c.field-meta.xml
<CustomField>
    <fullName>Project_Quoted_Processes__c</fullName>
    <formula>Project__r.Quoted_Processes__c</formula>
    <label>Project Quoted Processes</label>
    <type>Text</type>
</CustomField>