unpackaged/main/default/objects/Opportunity/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <formula>TEXT( Project__r.Stage__c )</formula>
    <label>Project Stage</label>
    <type>Text</type>
</CustomField>