unpackaged/main/default/objects/Opportunity/fields/PSE_MQ__c.field-meta.xml
<CustomField>
    <fullName>PSE_MQ__c</fullName>
    <formula>AND( ISPICKVAL(Quote_Type__c, 'Manually-Quoted') ,  CONTAINS(ManualQuoterUser__r.UserRole.Name,'PSE'))</formula>
    <label>PSE MQ?</label>
    <type>Checkbox</type>
</CustomField>