unpackaged/main/default/objects/Opportunity/fields/Qualified__c.field-meta.xml
<CustomField>
    <fullName>Qualified__c</fullName>
    <description>2021-07-21; part of moving towards a more flexible and scalable way to handle customers owned by Business Development team</description>
    <formula>Primary_Contact__r.Qualified__c &amp;&amp;
(
 (
  Account.Generic_Account__c &amp;&amp;
  Amount &lt;= 50000 &amp;&amp;
  Amount &gt;= 300
 ) ||
 (
  !Account.Generic_Account__c &amp;&amp;
  Amount &lt;= 250000 &amp;&amp;
  Amount &gt;= 500
 )
)</formula>
    <label>Qualified</label>
    <type>Checkbox</type>
</CustomField>