unpackaged/main/default/objects/Opportunity/fields/QuickParts__c.field-meta.xml
<CustomField>
    <fullName>QuickParts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuickParts</label>
    <type>Checkbox</type>
</CustomField>