unpackaged/main/default/objects/Opportunity/fields/QuickTurn__c.field-meta.xml
<CustomField>
    <fullName>QuickTurn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Quick Turn?</label>
    <type>Checkbox</type>
</CustomField>