unpackaged/main/default/objects/Opportunity/fields/Quota__c.field-meta.xml
<CustomField>
    <fullName>Quota__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship from Opportunity to Quota</description>
    <label>Quota</label>
    <referenceTo>Quota__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>