unpackaged/main/default/objects/Opportunity/fields/Quote_Classification__c.field-meta.xml
<CustomField>
    <fullName>Quote_Classification__c</fullName>
    <formula>if(
 Primary_Contact__r.Generic_Contact__c , "Generic",
if(
 Account.X2021_Strategic_Target__c ,"Strategic",
"Company"))</formula>
    <label>Quote Classification</label>
    <type>Text</type>
</CustomField>