unpackaged/main/default/objects/Opportunity/fields/Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_Date__c</fullName>
    <label>Quote Created Date</label>
    <type>Date</type>
</CustomField>