unpackaged/main/default/objects/Opportunity/fields/Quote_ERP_XOM_CREATE_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ERP_XOM_CREATE_ID__c</fullName>
    <description>This field is ERP Quote that initially created the Opportunity. The quote here is the initial quote in the process that started the opporutnity.</description>
    <externalId>true</externalId>
    <inlineHelpText>Auto populated by Quote_ERP__C trigger when a Quote creates an new</inlineHelpText>
    <label>Original Quote ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>