unpackaged/main/default/objects/Opportunity/fields/Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>Quote_Source__c</fullName>
    <label>Quote Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>