unpackaged/main/default/objects/Opportunity/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Quoted</fullName>
            </value>
            <value>
                <fullName>Manually-Quoted</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>