unpackaged/main/default/objects/Opportunity/fields/Quote_Win_Rate__c.field-meta.xml
<CustomField>
    <fullName>Quote_Win_Rate__c</fullName>
    <label>Quote Win Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>