unpackaged/main/default/objects/Opportunity/fields/Reassign_and_Open__c.field-meta.xml
<CustomField>
    <fullName>Reassign_and_Open__c</fullName>
    <formula>HYPERLINK("/flow/ReassignOpenProject?LaunchAccountId="&amp;IF(!ISBLANK(Account.ParentId),Account.ParentId,AccountId)&amp;"&amp;LaunchProjectId="&amp;Project__c
,"Reassign and Open")</formula>
    <label>Reassign and Open</label>
    <type>Text</type>
</CustomField>