unpackaged/main/default/objects/Opportunity/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>if(
 isblank(Primary_Contact__r.Contact_s_Date_of_First_Order__c),"New Buyer Potential",
if(
 and(
  not(isblank(Primary_Contact__r.Contact_s_Date_of_First_Order__c)), today()- Primary_Contact__r.Contact_s_Date_of_First_Order__c &lt;365),"New Revenue","Retention Revenue"
))</formula>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>