unpackaged/main/default/objects/Opportunity/fields/RR_d_to_IM_Specialist__c.field-meta.xml
<CustomField>
    <fullName>RR_d_to_IM_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RR'd to IM Specialist</label>
    <type>Checkbox</type>
</CustomField>