unpackaged/main/default/objects/Opportunity/fields/Safe_Contact_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Contact_Owner_ID__c</fullName>
    <formula>CASESAFEID(Primary_Contact__r.OwnerId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Contact Owner ID</label>
    <type>Text</type>
</CustomField>