unpackaged/main/default/objects/Opportunity/fields/Safe_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Opportunity_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Opportunity ID</label>
    <type>Text</type>
</CustomField>