unpackaged/main/default/objects/Opportunity/fields/Safe_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Safe_Project_ID__c</fullName>
    <formula>CASESAFEID( Project__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safe Project ID</label>
    <type>Text</type>
</CustomField>