unpackaged/main/default/objects/Opportunity/fields/Secondary_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source_ID__c</fullName>
    <description>Polymorphic ID representing Supplies Managed Service Order ID, Supplies Job ID or Supplies Order Source ID
This ID can be used by any integration and is always secondary to Xometry_ERP_ID__C and has no guarantee of uniqueness</description>
    <label>Secondary Source ID</label>
    <length>55</length>
    <type>Text</type>
</CustomField>