unpackaged/main/default/objects/Opportunity/fields/Shadow_JobId__c.field-meta.xml
<CustomField>
    <fullName>Shadow_JobId__c</fullName>
    <externalId>true</externalId>
    <label>Shadow JobId</label>
    <length>55</length>
    <type>Text</type>
</CustomField>