unpackaged/main/default/objects/Opportunity/fields/Sub_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Loss_Reason__c</fullName>
    <description>Optional Additional Detail About the Loss.</description>
    <label>Sub Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Partner</fullName>
            </value>
            <value>
                <fullName>DFM</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lead Time</fullName>
            </value>
            <value>
                <fullName>Service Concerns</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Local Competitor</fullName>
                <isActive>false</isActive>
                <label>Local Competitor</label>
            </value>
            <value>
                <fullName>On Demand</fullName>
                <isActive>false</isActive>
                <label>On-Demand</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>