unpackaged/main/default/objects/Opportunity/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <description>product sum</description>
    <inlineHelpText>product sum</inlineHelpText>
    <label>Order Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>