unpackaged/main/default/objects/Opportunity/fields/Sup_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Sup_Source_Category__c</fullName>
    <label>Sup Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>SFP</fullName>
            </value>
            <value>
                <fullName>New Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>