unpackaged/main/default/objects/Opportunity/fields/System_Reopened_Flag__c.field-meta.xml
<CustomField>
    <fullName>System_Reopened_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox that shows if an Opp was ever reopened by the system.</description>
    <label>System Reopened Flag</label>
    <type>Checkbox</type>
</CustomField>