unpackaged/main/default/objects/Opportunity/fields/Top_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Top_Account_Id__c</fullName>
    <formula>IF(!ISBLANK(Account.ParentId),CASESAFEID(Account.ParentId),CASESAFEID(AccountId))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Account Id</label>
    <type>Text</type>
</CustomField>