unpackaged/main/default/objects/Opportunity/fields/Top_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Top_Account_Owner__c</fullName>
    <formula>IF(!ISBLANK(Account.ParentId),Account.Parent.Owner_ID_Name__c,Account.Owner_ID_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Top Account Owner</label>
    <type>Text</type>
</CustomField>