unpackaged/main/default/objects/Opportunity/fields/Top_Level_Generic__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_Generic__c</fullName>
    <formula>IF(!ISBLANK(Account.ParentId), Account.Parent.Generic_Account__c,  Account.Generic_Account__c)</formula>
    <label>Top Level Generic</label>
    <type>Checkbox</type>
</CustomField>