unpackaged/main/default/objects/Opportunity/fields/Top_Level_House__c.field-meta.xml
<CustomField>
    <fullName>Top_Level_House__c</fullName>
    <formula>IF(!ISBLANK(Account.ParentId), Account.Parent.House_Retainer__c, Account.House_Retainer__c)</formula>
    <label>Top Level House</label>
    <type>Checkbox</type>
</CustomField>