unpackaged/main/default/objects/Opportunity/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Subtotal + Shipping</description>
    <inlineHelpText>Subtotal + Shipping</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>