unpackaged/main/default/objects/Opportunity/fields/Total_Amt_Additive__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Additive__c</fullName>
    <formula>Total_Amt_BinderJetting__c +
Total_Amt_Carbon__c +
Total_Amt_SLS__c +
Total_Amt_SLA__c +
Total_Amt_HPMultJetFusion__c +
Total_Amt_FDM__c  +
Total_Amt_DMLS__c +
Total_Amt_PolyJet3D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amt Additive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>