unpackaged/main/default/objects/Opportunity/fields/Total_Amt_CNC_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_CNC_Sheet__c</fullName>
    <formula>Total_Amt_CNC__c +
Total_Amt_SheetMetal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amt CNC &amp; Sheet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>