unpackaged/main/default/objects/Opportunity/fields/Total_Amt_DMLS__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_DMLS__c</fullName>
    <label>Total Amt DMLS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>