unpackaged/main/default/objects/Opportunity/fields/Total_Amt_Extrusion__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Extrusion__c</fullName>
    <label>Total Amt Metal Extrusion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>