unpackaged/main/default/objects/Opportunity/fields/Total_Amt_HPMultJetFusion__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_HPMultJetFusion__c</fullName>
    <label>Total Amt HPMultJetFusion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>